--- a/css/styles.css
+++ b/css/styles.css
@@ -2,10 +2,9 @@
 body {
   max-width: 320px;
   margin: 0 auto;
-  border: 1px solid black;
 }
 
-.container {
+.main-container {
   display: flex;
   flex-direction: column;
 }
