--- a/css/styles.css
+++ b/css/styles.css
@@ -8,26 +8,30 @@ body {
   display: flex;
   flex-direction: column;
 }
+
 .nav-bar {
   display: flex;
   justify-content: space-between;
   padding-right: 16px;
   align-items: center;
 }
+
 .intro {
   padding: 16px;
 }
-.intro-header>h1 {
-  font-family: 'Playfair Display';
-  color: #1A2236;
+
+.intro-header > h1 {
+  font-family: 'Playfair Display',sans-serif;
+  color: #1a2236;
   font-weight: 400;
   width: 220px;
   height: 100px;
   font-size: 40px;
   line-height: 100%;
 }
-.intro-header>p {
-  font-family: 'Poppins';
+
+.intro-header > p {
+  font-family: 'Poppins',sans-serif;
   font-size: 14px;
   font-weight: 400;
   width: 288px;
@@ -35,19 +39,21 @@ body {
   line-height: 21px;
   letter-spacing: -0.01cm;
 }
+
 .button-contact {
   box-sizing: border-box;
   width: 288px;
   height: 50px;
-  background: #1A2236 ;
-  color: #FFFFFF;
-  font-family: 'Poppins';
+  background: #1a2236;
+  color: #ffffff;
+  font-family: 'Poppins',sans-serif;
   text-align: center;
   font-size: 16px;
   text-decoration: none;
   font-weight: 400;
   margin-bottom: 30px;
 }
+
 .intro-image-art {
   width: 320px;
   height: 160px;
