--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@ body {
 }
 
 .intro-header > h1 {
-  font-family: 'Playfair Display',sans-serif;
+  font-family: 'Playfair Display', sans-serif;
   color: #1a2236;
   font-weight: 400;
   width: 220px;
@@ -31,7 +31,7 @@ body {
 }
 
 .intro-header > p {
-  font-family: 'Poppins',sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 14px;
   font-weight: 400;
   width: 288px;
@@ -45,8 +45,8 @@ body {
   width: 288px;
   height: 50px;
   background: #1a2236;
-  color: #ffffff;
-  font-family: 'Poppins',sans-serif;
+  color: #fff;
+  font-family: 'Poppins', sans-serif;
   text-align: center;
   font-size: 16px;
   text-decoration: none;
