--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-
 body {
   max-width: 320px;
   margin: 0 auto;
@@ -9,32 +8,36 @@ body {
   flex-direction: column;
 }
 
-.nav-bar {
+.nav-header {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   padding-right: 16px;
+  height: 15vh;
   align-items: center;
+  background: #fff url("../portfolio-template-5/image_geometry_1.svg") 0 0 no-repeat;
 }
 
 .intro {
   padding: 16px;
+  height: 110vh;
+  background: #fff url("../portfolio-template-5/image_geometry_2.svg") 0 450px no-repeat;
 }
 
-.intro-header > h1 {
+.intro-header>h1 {
   font-family: 'Playfair Display', sans-serif;
   color: #1a2236;
   font-weight: 400;
-  width: 220px;
+  width: 100%;
   height: 100px;
   font-size: 40px;
   line-height: 100%;
 }
 
-.intro-header > p {
+.intro-header>p {
   font-family: 'Poppins', sans-serif;
   font-size: 14px;
   font-weight: 400;
-  width: 288px;
+  width: 100%;
   height: 126px;
   line-height: 21px;
   letter-spacing: -0.01cm;
@@ -42,7 +45,7 @@ body {
 
 .button-contact {
   box-sizing: border-box;
-  width: 288px;
+  width: 100%;
   height: 50px;
   background: #1a2236;
   color: #fff;
@@ -52,6 +55,7 @@ body {
   text-decoration: none;
   font-weight: 400;
   margin-bottom: 30px;
+  align-self: center;
 }
 
 .intro-image-art {
