--- a/css/styles.css
+++ b/css/styles.css
@@ -13,13 +13,13 @@ body {
   padding-right: 16px;
   height: 15vh;
   align-items: center;
-  background: #fff url("../portfolio-template-5/image_geometry_1.svg") 0 0 no-repeat;
+  background: #fff url("../res-icons/image_geometry_1.svg") 0 0 no-repeat;
 }
 
 .intro {
   padding: 16px;
   height: 110vh;
-  background: #fff url("../portfolio-template-5/image_geometry_2.svg") 0 400px no-repeat;
+  background: #fff url("../res-icons/image_geometry_2.svg") 0 400px no-repeat;
   background-size: contain;
 }
 
@@ -46,7 +46,7 @@ body {
 .button-contact {
   box-sizing: border-box;
   width: 100%;
-  height: 50px;
+  height: 10vh;
   background: #1a2236;
   color: #fff;
   font-family: 'Poppins', sans-serif;
@@ -55,5 +55,4 @@ body {
   text-decoration: none;
   font-weight: 400;
   margin-bottom: 30px;
-  align-self: center;
 }
