--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 body {
   margin: 0 auto;
+  
 }
 
 .main-container {
@@ -10,16 +11,16 @@ body {
 .nav-header {
   display: flex;
   justify-content: flex-end;
-  padding-right: 16px;
+  padding-right: 5vw;
   height: 15vh;
   align-items: center;
   background: #fff url("../res-icons/image_geometry_1.svg") 0 0 no-repeat;
 }
 
 .intro {
-  padding: 16px;
-  height: 110vh;
-  background: #fff url("../res-icons/image_geometry_2.svg") 0 400px no-repeat;
+  padding: 5vw;
+  height: 100vh;
+  background: #fff url("../res-icons/image_geometry_2.svg") 0 70vh no-repeat;
   background-size: contain;
 }
 
@@ -28,18 +29,18 @@ body {
   color: #1a2236;
   font-weight: 400;
   width: 100%;
-  height: 100px;
-  font-size: 40px;
+  height: 15vh;
+  font-size: 2.2em;
   line-height: 100%;
 }
 
 .intro-header > p {
   font-family: 'Poppins', sans-serif;
-  font-size: 14px;
+  font-size: 0.9em;
   font-weight: 400;
   width: 100%;
-  height: 126px;
-  line-height: 21px;
+  height: 20vh;
+  line-height: 1.5em;
   letter-spacing: -0.01cm;
 }
 
@@ -51,8 +52,86 @@ body {
   color: #fff;
   font-family: 'Poppins', sans-serif;
   text-align: center;
-  font-size: 16px;
+  font-size: 1.3em;
   text-decoration: none;
   font-weight: 400;
-  margin-bottom: 30px;
+  margin-bottom: 20vh;
 }
+
+.projects {
+  padding: 5vw;
+}
+
+.projects-section-header {
+  font-family: 'Playfair Display', sans-serif;
+  color: #1a2236;
+  font-weight: 400;
+  width: 100%;
+  height: 15vh;
+  font-size: 2.2em;
+  line-height: 100%;
+}
+
+.projects-container {
+  display: grid;
+  gap: 5vh;
+}
+
+.project-tile {
+  display: flex;
+  flex-direction: column;
+}
+
+.project-thumbnail {
+  width: 90vw;
+  object-fit: contain;
+}
+.project-details {
+  background: #1a2236;
+  padding: 5vw;
+  color: #fff;
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* justify-content: space-between; */
+}
+
+.project-title {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 300;
+  line-height: 1em;
+  font-size: 1.3em;
+}
+
+.tech-list {
+  display: flex;
+  margin-bottom: 5vh;
+}
+
+.tech-item {
+  font-family: 'Poppins', sans-serif;
+  padding: 1vh 2vh;
+  margin-right: 2vw;
+  background: #98dede;
+  color: #1a2236;
+  font-size: 0.8em;
+}
+
+.project-button {
+  display: flex;
+  justify-content: space-around;
+  width: 60%;
+  border: 1px solid #fff;
+  color: #fff;
+  background: #1a2236;
+  padding: 2vh 1vw;
+  
+}
+
+.project-button > a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 1.2em;
+}
+
+
+
