--- a/css/styles.css
+++ b/css/styles.css
@@ -1,80 +1,71 @@
 body {
   margin: 0 auto;
-  
 }
 
 .main-container {
   display: flex;
   flex-direction: column;
+  padding: 5vw;
 }
 
 .nav-header {
   display: flex;
   justify-content: flex-end;
-  padding-right: 5vw;
   height: 15vh;
   align-items: center;
   background: #fff url("../res-icons/image_geometry_1.svg") 0 0 no-repeat;
 }
 
 .intro {
-  padding: 5vw;
   height: 100vh;
   background: #fff url("../res-icons/image_geometry_2.svg") 0 70vh no-repeat;
   background-size: contain;
 }
 
-.intro-header > h1 {
+.section-header {
   font-family: 'Playfair Display', sans-serif;
   color: #1a2236;
   font-weight: 400;
   width: 100%;
-  height: 15vh;
-  font-size: 2.2em;
+  font-size: 2.4em;
   line-height: 100%;
 }
 
-.intro-header > p {
+.section-content> p {
   font-family: 'Poppins', sans-serif;
   font-size: 0.9em;
   font-weight: 400;
   width: 100%;
-  height: 20vh;
+  color: #1a2236;
   line-height: 1.5em;
   letter-spacing: -0.01cm;
+  margin-bottom: 5vh;
 }
 
-.button-contact {
-  box-sizing: border-box;
+.button-generic {
   width: 100%;
   height: 10vh;
-  background: #1a2236;
-  color: #fff;
   font-family: 'Poppins', sans-serif;
+  color: #fff;
   text-align: center;
-  font-size: 1.3em;
-  text-decoration: none;
+  font-size: 1.2em;
   font-weight: 400;
-  margin-bottom: 20vh;
+  margin-bottom: 5vh;
+  background: #1a2236;
 }
 
-.projects {
-  padding: 5vw;
-}
-
-.projects-section-header {
-  font-family: 'Playfair Display', sans-serif;
+.button-generic:hover {
+  background: #fff;
   color: #1a2236;
-  font-weight: 400;
-  width: 100%;
-  height: 15vh;
-  font-size: 2.2em;
-  line-height: 100%;
+  cursor: pointer;
+}
+
+.button-generic:active {
+border: 3px solid #1a2236;
 }
 
 .projects-container {
   display: grid;
-  gap: 5vh;
 }
 
 .project-tile {
@@ -89,14 +80,11 @@ body {
 .project-details {
   background: #1a2236;
   padding: 5vw;
-  color: #fff;
-  /* display: flex; */
-  /* flex-direction: column; */
-  /* justify-content: space-between; */
 }
 
 .project-title {
   font-family: 'Poppins', sans-serif;
+  color: #fff;
   font-weight: 300;
   line-height: 1em;
   font-size: 1.3em;
@@ -116,22 +104,38 @@ body {
   font-size: 0.8em;
 }
 
-.project-button {
-  display: flex;
-  justify-content: space-around;
-  width: 60%;
+.button-project {
+  width: 80%;
   border: 1px solid #fff;
-  color: #fff;
-  background: #1a2236;
-  padding: 2vh 1vw;
-  
+  background: #1a2236 url('../res-icons/ic_arrow_right.svg') 90% 55% no-repeat;
+  /* padding-left: 5vw; */
+}
+.button-project:hover {
+  background: #fff url('../res-icons/ic_arrow_right-9.svg') 90% 55% no-repeat;
 }
 
-.project-button > a {
-  text-decoration: none;
-  color: #fff;
-  font-size: 1.2em;
+.about-me {
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  gap: 5vh;
 }
 
+.skillset {
+  padding: 10vh 20vw;
+  color: #fff;
+}
+.button-aboutme {
+  background: #1a2236 url('../res-icons/ic_download.svg') 85% 55% no-repeat ;
+}
+
+.skillset1 {
+  background: #1c528a;
+}
+.skillset2 {
+  background: #e2505c;
+}
+.skillset3 {
+  background: #febf52;
+}
 
 
