--- a/css/styles.css
+++ b/css/styles.css
@@ -17,8 +17,8 @@ body {
 }
 
 .intro {
-  height: 100vh;
-  background: #fff url("../res-icons/image_geometry_2.svg") 0 70vh no-repeat;
+  height: 90vh;
+  background: #fff url("../res-icons/image_geometry_2.svg") 0 80% no-repeat;
   background-size: contain;
 }
 
@@ -77,6 +77,7 @@ border: 3px solid #1a2236;
   width: 90vw;
   object-fit: contain;
 }
+
 .project-details {
   background: #1a2236;
   padding: 5vw;
@@ -90,7 +91,7 @@ border: 3px solid #1a2236;
   font-size: 1.3em;
 }
 
-.tech-list {
+.tech-item-container {
   display: flex;
   margin-bottom: 5vh;
 }
@@ -110,6 +111,7 @@ border: 3px solid #1a2236;
   background: #1a2236 url('../res-icons/ic_arrow_right.svg') 90% 55% no-repeat;
   /* padding-left: 5vw; */
 }
+
 .button-project:hover {
   background: #fff url('../res-icons/ic_arrow_right-9.svg') 90% 55% no-repeat;
 }
@@ -120,22 +122,40 @@ border: 3px solid #1a2236;
   gap: 5vh;
 }
 
-.skillset {
-  padding: 10vh 20vw;
-  color: #fff;
-}
 .button-aboutme {
   background: #1a2236 url('../res-icons/ic_download.svg') 85% 55% no-repeat ;
 }
 
+.skillset {
+  padding: 0 10vw;
+  color: #fff;
+  font-family: 'Poppins', sans-serif;
+}
+
 .skillset1 {
-  background: #1c528a;
+  background: #1c528a url('../res-icons/ic_languages_mob.svg') 100% 100% no-repeat;
 }
+
 .skillset2 {
-  background: #e2505c;
+  background: #e2505c url('../res-icons/ic_framework.svg') 100% 100% no-repeat;
 }
+
 .skillset3 {
-  background: #febf52;
+  background: #febf52 url('../res-icons/ic_skills.svg') 100% 100% no-repeat;
 }
+
+.skillset-header {
+  font-size: 1.5em;
+  font-weight: 800;
+}
+
+.skill-item {
+  position: relative;
+  font-weight: 600;
+  font-size: 1.3em;
+  line-height: 1.5em;
+  left: -5vw;
+}
+
 
 
