--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ body {
 
 .intro {
   height: 90vh;
-  background: #fff url("../res-icons/image_geometry_2.svg") 0 80% no-repeat;
+  background: #fff url("../res-icons/image_geometry_2.svg") 0 100% no-repeat;
   background-size: contain;
 }
 
@@ -31,9 +31,9 @@ body {
   line-height: 100%;
 }
 
-.section-content> p {
+.section-content {
   font-family: 'Poppins', sans-serif;
-  font-size: 0.9em;
+  font-size: 1.2em;
   font-weight: 400;
   width: 100%;
   color: #1a2236;
@@ -61,7 +61,7 @@ body {
 }
 
 .button-generic:active {
-border: 3px solid #1a2236;
+  border: 3px solid #1a2236;
 }
 
 .projects-container {
@@ -109,7 +109,6 @@ border: 3px solid #1a2236;
   width: 80%;
   border: 1px solid #fff;
   background: #1a2236 url('../res-icons/ic_arrow_right.svg') 90% 55% no-repeat;
-  /* padding-left: 5vw; */
 }
 
 .button-project:hover {
@@ -123,7 +122,7 @@ border: 3px solid #1a2236;
 }
 
 .button-aboutme {
-  background: #1a2236 url('../res-icons/ic_download.svg') 85% 55% no-repeat ;
+  background: #1a2236 url('../res-icons/ic_download.svg') 85% 55% no-repeat;
 }
 
 .skillset {
@@ -156,6 +155,3 @@ border: 3px solid #1a2236;
   line-height: 1.5em;
   left: -5vw;
 }
-
-
-
