add styling to form, social media icons,update gitignore
1.Add styling to contact form section, contact form and inputs
2.Add social media icons and style social media icons

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,6 @@ body {
 .main-container {
   display: flex;
   flex-direction: column;
-  padding: 5vw;
 }
 
 .nav-header {
@@ -15,15 +14,18 @@ body {
   align-items: center;
   background: #fff url("../res-icons/image_geometry_1.svg") 0 0 no-repeat;
   background-size: contain;
+  padding-right: 5vw;
 }
 
-.intro {
+.intro-section {
   min-height: 100vh;
   background: #fff url("../res-icons/image_geometry_2.svg") 0 100% no-repeat;
+  background-size: contain;
+  padding: 5vw;
 }
 
 .section-header {
-  font-family: 'Playfair Display', sans-serif;
+  font-family: "Playfair Display", sans-serif;
   color: #1a2236;
   font-weight: 400;
   width: 100%;
@@ -32,7 +34,7 @@ body {
 }
 
 .section-content {
-  font-family: 'Poppins', sans-serif;
+  font-family: Poppins, sans-serif;
   font-size: 1.2em;
   font-weight: 400;
   width: 100%;
@@ -45,7 +47,7 @@ body {
 .button-generic {
   width: 100%;
   height: 10vh;
-  font-family: 'Poppins', sans-serif;
+  font-family: Poppins, sans-serif;
   color: #fff;
   text-align: center;
   font-size: 1.2em;
@@ -62,6 +64,10 @@ body {
 
 .button-generic:active {
   border: 3px solid #1a2236;
+}
+
+.projects-section {
+  padding: 5vw;
 }
 
 .projects-container {
@@ -84,7 +90,7 @@ body {
 }
 
 .project-title {
-  font-family: 'Poppins', sans-serif;
+  font-family: Poppins, sans-serif;
   color: #fff;
   font-weight: 300;
   line-height: 1em;
@@ -95,11 +101,12 @@ body {
   padding-left: 0;
   margin-left: 0;
   margin-bottom: 5vh;
+  display: flex;
 }
 
 .tech-item {
   display: inline;
-  font-family: 'Poppins', sans-serif;
+  font-family: Poppins, sans-serif;
   padding: 1vh 2vh;
   margin-right: 2vw;
   background: #98dede;
@@ -110,39 +117,41 @@ body {
 .button-project {
   width: 80%;
   border: 1px solid #fff;
-  background: #1a2236 url('../res-icons/ic_arrow_right.svg') 90% 55% no-repeat;
+  background: #1a2236 url("../res-icons/ic_arrow_right.svg") 90% 55% no-repeat;
 }
 
 .button-project:hover {
-  background: #fff url('../res-icons/ic_arrow_right-9.svg') 90% 55% no-repeat;
+  background: #fff url("../res-icons/ic_arrow_right-9.svg") 90% 55% no-repeat;
 }
 
-.about-me {
+.about-me-section {
   display: grid;
   grid-template-rows: 1fr 1fr 1fr 1fr;
   gap: 5vh;
+  padding: 5vw;
+  margin-bottom: 10vh;
 }
 
 .button-aboutme {
-  background: #1a2236 url('../res-icons/ic_download.svg') 85% 55% no-repeat;
+  background: #1a2236 url("../res-icons/ic_download.svg") 85% 55% no-repeat;
 }
 
 .skillset {
   padding: 0 10vw;
   color: #fff;
-  font-family: 'Poppins', sans-serif;
+  font-family: Poppins, sans-serif;
 }
 
 .skillset1 {
-  background: #1c528a url('../res-icons/ic_languages_mob.svg') 100% 100% no-repeat;
+  background: #1c528a url("../res-icons/ic_languages_mob.svg") 100% 100% no-repeat;
 }
 
 .skillset2 {
-  background: #e2505c url('../res-icons/ic_framework.svg') 100% 100% no-repeat;
+  background: #e2505c url("../res-icons/ic_framework.svg") 100% 100% no-repeat;
 }
 
 .skillset3 {
-  background: #febf52 url('../res-icons/ic_skills.svg') 100% 100% no-repeat;
+  background: #febf52 url("../res-icons/ic_skills.svg") 100% 100% no-repeat;
 }
 
 .skillset-header {
@@ -159,4 +168,64 @@ body {
   font-weight: 600;
   font-size: 1.3em;
   line-height: 1.5em;
+}
+
+.contact-me-section {
+  background: #f9f9fa url("../res-icons/image_geometry_1.svg") 0 0 no-repeat;
+  padding: 5vw;
+}
+
+.contact-header {
+  margin-top: 15vh;
+}
+
+.visitor-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-item {
+  background: #fff;
+  border: solid 1px #dfdfe0;
+  border-radius: 4px;
+  padding: 4vw;
+  margin: 1vh;
+  font-family: Poppins, sans-serif;
+  font-size: 1.2em;
+}
+
+.form-textarea {
+  margin-bottom: 5vh;
+}
+
+.social-links {
+  background: #1a2236;
+  height: 15%;
+}
+
+.resume-link {
+  text-decoration: none;
+}
+
+.resume-link > div {
+  color: #98dede;
+  padding: 5vw;
+  width: 60%;
+  background: url("../res-icons/ic_link_teal.svg") 80% 50% no-repeat;
+  font-family: Poppins, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 1.3em;
+  line-height: 1.7em;
+}
+
+.link-container {
+  height: 10vh;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+
+.link-container > a {
+  height: 60%;
 }
