--- a/css/styles.css
+++ b/css/styles.css
@@ -124,9 +124,6 @@ body {
 }
 
 .about-me-section {
-  display: grid;
-  grid-template-rows: 1fr 1fr 1fr 1fr;
-  gap: 5vh;
   padding: 5vw;
   margin-bottom: 10vh;
 }
@@ -134,23 +131,26 @@ body {
 .button-aboutme {
   background: #1a2236 url("../res-icons/ic_download.svg") 85% 55% no-repeat;
 }
-
 .skillset {
-  padding: 0 10vw;
+  padding: 5vh 15vw;
+  margin-bottom: 3vh;
   color: #fff;
   font-family: Poppins, sans-serif;
 }
 
 .skillset1 {
   background: #1c528a url("../res-icons/ic_languages_mob.svg") 100% 100% no-repeat;
+  background-size: 40% 20%;
 }
 
 .skillset2 {
   background: #e2505c url("../res-icons/ic_framework.svg") 100% 100% no-repeat;
+  background-size: 40% 20%;
 }
 
 .skillset3 {
   background: #febf52 url("../res-icons/ic_skills.svg") 100% 100% no-repeat;
+  background-size: 40% 20%;
 }
 
 .skillset-header {
@@ -293,24 +293,31 @@ body {
   }
 
   .section-header {
-    font-size: 2.3em;
+    font-size: 3.7em;
   }
 
   .section-content {
-    font-size: 1.2em;
+    font-size: 0.9em;
   }
 
   .button-generic {
-    /* to do - better height value after styling all buttons */
     width: 70%;
     border: 0;
+  }
+
+  .button-generic:hover{
+    border: solid 1px #1a2236;
+  }
+
+  .button-generic:active{
+    border: solid 3px #1a2236;
   }
 
   /* styling for projects section -ram */
 
   .projects-container {
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(7, 1fr);
+    grid-template-rows: repeat(6, 1fr);
     gap: 0;
   }
 
@@ -322,7 +329,8 @@ body {
     left: -15%;
     font-size: 3.5em;
   }
-  .project-image-dot{
+
+  .project-image-dot {
     grid-area: 1/2/span 1/span 1;
     background: url("../res-icons/image_dots-1.svg") 0 0 no-repeat;
     background-size: 90%;
@@ -377,4 +385,33 @@ body {
   .project-details {
     display: none;
   }
+
+  /* styling for about-me section -ram */
+
+  .about-me-section {
+    padding: 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+  .about-me-section>header{
+    padding: 15%;
+    order: 2;
+  }
+
+  .skillset-grid{
+    display: grid;
+    order: 1;
+    grid-template: 50% 50% / 50% 50%;
+    padding: 10%;
+  }
+  .skillset{
+    padding: 0 10%;
+    margin: 0;
+    font-size: 0.6em;
+  }
+  .skillset-image-art{
+    background: url("../res-icons/image_dots_with_teal.svg") 100% 100% no-repeat;
+
+  }
+
 }
