--- a/css/styles.css
+++ b/css/styles.css
@@ -278,6 +278,7 @@ body {
     height: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
   }
 
   .intro-container > header {
