--- a/css/styles.css
+++ b/css/styles.css
@@ -80,6 +80,11 @@ body {
   display: grid;
 }
 
+.project-tile {
+  display: flex;
+  flex-direction: column;
+}
+
 .project-thumbnail {
   width: 100%;
   object-fit: contain;
@@ -355,7 +360,7 @@ body {
   }
 
   .project-tile-1 {
-    grid-area: 1/3/span 2/span 5;
+    grid-area: 1/3/span 3/span 5;
   }
 
   .project-tile-2 {
@@ -377,7 +382,8 @@ body {
   }
 
   .project-tile-5 {
-    grid-area: 4 /6 /span 1/span 3;
+    grid-area: 3 /5 /span 2/span 3;
+    z-index: 2;
   }
 
   .project-image-art-2 {
@@ -402,6 +408,47 @@ body {
 
   .project-details {
     display: none;
+  }
+
+  .project-tile-1 > .project-details {
+    display: block;
+    padding: 0 5vw;
+    height:42%;
+  }
+
+  .project-tile-1 > .project-thumbnail {
+    height: 25%;
+  }
+
+  .project-tile-1 > .project-details > .button-project{
+    width: 40%;
+    border: solid 2px #fff;
+  }
+
+  .project-tile-5{
+    flex-direction: column-reverse;
+  }
+  .project-tile-5 > .project-details {
+    display: block;
+    padding: 0 5vw;
+    height:42%
+  }
+
+  .project-tile-5 > .project-thumbnail {
+    height: 40%;
+  }
+
+  .project-tile-5 > .project-details > .button-project{
+    width: 50%;
+    border: solid 2px #fff;
+  }
+
+  .project-tile-5 > .project-details > ul > li:nth-child(3){
+    display: none;
+  }
+
+  .project-tile-5 > .project-details > .tech-item-list {
+    margin-bottom: 2vh;
   }
 
   /* styling for about-me section -ram */
