Add transition to social media footer icons

--- a/css/styles.css
+++ b/css/styles.css
@@ -549,4 +549,10 @@ body {
     float: right;
     width: 30%;
   }
+
+  .link-container>a>img:hover{
+    transform: scale(2);
+    transition: transform 1s;
+   
+  }
 }
