--- a/css/styles.css
+++ b/css/styles.css
@@ -400,7 +400,7 @@ body {
   }
 
   .project-tile-1 {
-    grid-area: 1/3 / span 3 / span 5;
+    grid-area: 1/3 / span 2 / span 5;
   }
 
   .project-tile-2 {
@@ -422,9 +422,7 @@ body {
   }
 
   .project-tile-5 {
-    grid-area: 3 /5 / span 2 / span 3;
-    z-index: 2;
-    flex-direction: column-reverse;
+    grid-area: 4 /5 / span 1 / span 3;
   }
 
   .project-image-art-2 {
@@ -453,7 +451,7 @@ body {
     display: none;
   }
 
-  .project-tile-1 > .project-details {
+  /* .project-tile-1 > .project-details {
     display: block;
     padding: 0 5vw;
     height: 42%;
@@ -489,7 +487,7 @@ body {
 
   .project-tile-5 > .project-details > .tech-item-list {
     margin-bottom: 2vh;
-  }
+  } */
 
   /* styling for about-me section -ram */
 
