--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 body {
   margin: 0 auto;
+  box-sizing: border-box;
 }
 
 .scroll-lock {
@@ -30,7 +31,7 @@ body {
   padding-bottom: 30%;
 }
 
-.nav-list-item > a {
+.nav-list-item>a {
   text-decoration: none;
   color: #1a2236;
   font-family: Poppins, sans-serif;
@@ -114,11 +115,12 @@ body {
 .project-tile {
   display: flex;
   flex-direction: column;
+  justify-content: stretch;
 }
 
 .project-thumbnail {
   width: 100%;
-  object-fit: contain;
+  object-fit: cover;
 }
 
 .project-details {
@@ -149,6 +151,124 @@ body {
   background: #98dede;
   color: #1a2236;
   font-size: 0.8em;
+}
+
+.popup-container {
+  position: fixed;
+  font-family: Poppins, sans-serif;
+  z-index: 1;
+  width: 100%;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  background: #fff;
+  padding:0 5vw;
+  margin: 0 auto;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+.popup-header {
+  font-weight: 700;
+  font-size: 1.8em;
+  line-height: 1em;
+}
+
+.scroll-container{
+  height: 50%;
+  width: 90%;
+  padding: 0;
+  margin: 5vh 0;
+}
+
+.pop-thumbnail{
+  width: 90%;
+  height: 90%;
+  object-fit: cover;
+}
+
+.popup-description {
+  width: 90%;
+  font-weight: 400;
+  font-size: 1.2em;
+  line-height: 1.8em;
+  text-align: left;
+  word-wrap: normal;
+}
+
+.pop-btn-contnr {
+  width: 90%;
+  height: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.popup-button {
+  width: 80%;
+  padding: 20px 0;
+  border: solid 3px #1a2236;
+  color: #1a2236;
+  font-weight: 500;
+  font-size: 1.25em;
+  line-height: 1.7em;
+}
+
+.popup-button:hover {
+  background: #1a2236;
+  color: #fff;
+  border: solid 3px #fff;
+  cursor: pointer;
+}
+
+.left-button{
+  float: left;
+  width: 10%;
+  min-height: 100%;
+  border: 0;
+  background: url('../res-icons/Vector 4.svg') 0 50% no-repeat;
+}
+.right-button{
+  float: right;
+  width: 10%;
+  border: 0;
+  background: url('../res-icons/Vector 5.svg') 100% 50%  no-repeat;
+  min-height: 100%;
+}
+.left-button:hover{
+  cursor: pointer;
+}
+.right-button:hover{
+  cursor: pointer;
+}
+
+.live-button {
+  background: #fff url('../res-icons/ic_link.svg') 90% 30% no-repeat;
+  background-size: 10%;
+}
+
+.src-button {
+  background: #fff url('../res-icons/ic_github_white.svg') 90% 30% no-repeat;
+  background-size: 10%;
+}
+
+.pop-tech-cntnr {
+  margin: 0;
+  padding: 0;
+  width: 80%;
+  list-style: none;
+  display: flex;
+}
+
+.pop-tech-item {
+  border: solid 1px #1a2236;
+  font-weight: 300;
+  font-size: 1.4m;
+  line-height: 1em;
+  text-align: center;
+  padding: 10px 10px;
+  margin: 0 20px;
 }
 
 .button-project {
@@ -220,7 +340,7 @@ body {
   align-items: stretch;
 }
 
-.form-item > label {
+.form-item>label {
   display: none;
 }
 
@@ -252,7 +372,7 @@ body {
   width: 40%;
 }
 
-.resume-link > div {
+.resume-link>div {
   color: #98dede;
   font-family: Poppins, sans-serif;
   font-style: normal;
@@ -273,7 +393,12 @@ body {
   justify-content: space-between;
 }
 
+.project-details-hover{
+ position: absolute;
+ width: 40%;
+  }
 @media screen and (min-width: 768px) {
+
   /* styling for navigation bar elements -ram */
   .nav-bar {
     padding: 5vh;
@@ -292,7 +417,7 @@ body {
     align-items: center;
   }
 
-  .nav-list-item > a {
+  .nav-list-item>a {
     padding: 2.5vh;
     text-decoration: none;
     font-family: Poppins, sans-serif;
@@ -319,7 +444,7 @@ body {
     grid-template-rows: 1fr;
   }
 
-  .intro-container > header {
+  .intro-container>header {
     padding: 5%;
     display: grid;
     grid-template-rows: 0.5fr 1fr 1fr 1fr;
@@ -376,7 +501,7 @@ body {
     gap: 0;
   }
 
-  .projects-section > h2 {
+  .projects-section>h2 {
     transform: rotate(-90deg);
     width: 50%;
     text-align: left;
@@ -451,44 +576,10 @@ body {
     display: none;
   }
 
-  /* .project-tile-1 > .project-details {
-    display: block;
-    padding: 0 5vw;
-    height: 42%;
-  }
-
-  .project-tile-1 > .project-thumbnail {
-    height: 25%;
-  }
-
-  .project-tile-1 > .project-details > .button-project {
-    width: 40%;
+  .button-project{
     border: solid 2px #fff;
   }
-
-  .project-tile-5 > .project-details {
-    display: block;
-    padding: 0 5vw;
-    height: 42%;
-  }
-
-  .project-tile-5 > .project-thumbnail {
-    height: 40%;
-  }
-
-  .project-tile-5 > .project-details > .button-project {
-    width: 50%;
-    border: solid 2px #fff;
-  }
-
-  .project-tile-5 > .project-details > ul > li:nth-child(3) {
-    display: none;
-  }
-
-  .project-tile-5 > .project-details > .tech-item-list {
-    margin-bottom: 2vh;
-  } */
-
+  
   /* styling for about-me section -ram */
 
   .about-me-section {
@@ -497,7 +588,7 @@ body {
     grid-template-columns: 1fr 1fr;
   }
 
-  .about-me-section > header {
+  .about-me-section>header {
     padding: 15%;
     order: 2;
   }
@@ -545,7 +636,7 @@ body {
     display: block;
   }
 
-  .form-item > label {
+  .form-item>label {
     display: block;
     font-size: 1em;
     text-align: left;
@@ -585,7 +676,7 @@ body {
     width: 30%;
   }
 
-  .link-container > a > img:hover {
+  .link-container>a>img:hover {
     transform: scale(2);
     transition: transform 1s;
   }
